--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"eslint-config-preact": "^1.2.0",
 		"sass": "^1.66.1",
 		"typescript": "^5.2.2",
+		"uid": "^2.0.2",
 		"vite": "^4.3.2",
 		"vite-plugin-svgr": "^3.2.0"
 	}
